tests/invalid/While_Invalid_16.whiley
method g(int x) -> int:
    int i = 0
    while i < x where i >= g(x):
        i = i + 1
    return x
